# actix-svelte

./: Cargo.toml  README.md  build.rs  database.db  database.db-shm  database.db-wal
client/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
migrations/: 20250516151632_user_table.sql
src/: handlers.rs  lib.rs  main.rs  settings.rs  telemetry.rs  ws-main.rs
src/learning/: conditional_pattern_matching.rs
src/server/: handlers.rs  mod.rs  utils.rs
src/server/api/: mod.rs  routes.rs  swagger.rs
src/server/api/handlers/: auth.rs  mod.rs
