[package]
name = "actix-svelte"
authors = ["Sergio Falcon <sergiojfalcon@gmail.com>"]
description = "Application that serves a Svlete frontend and an Actix backend"
edition = "2021"
repository = "https://github.com/sergiojfalcon/actix-svelte"
readme = "README.md"
keywords = ["actix", "svelte", "windows-service"]
publish = false
version = "0.1.0"
default-run = "actix-svelte"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.9.0"
futures = "0.3.31"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["actix", "actix-web"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
windows-service = "0.7.0"

[package.metadata.env]
HOST = "127.0.0.1"
PORT = 8041
WINDOW_SERVICE_HOST = "127.0.0.1"
WINDOW_SERVICE_PORT = 8091

[features]
default = [] # No features enabled by default
windows_service = [] # Enables service mode

[[bin]]
name = "actix-svelte"
path = "src/main.rs"

[[bin]]
name = "actix-svelte-ws"
path = "src/ws-main.rs"