[package]
name = "actix-svelte"
authors = ["Sergio Falcon <sergiojfalcon@gmail.com>"]
description = "Application that serves a Svlete frontend and an Actix backend"
edition = "2021"
repository = "https://github.com/sergiojfalcon/actix-svelte"
readme = "README.md"
keywords = ["actix", "svelte", "windows-service"]
publish = false
version = "0.1.0"
default-run = "actix-svelte"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
dotenvy = "0.15.7"
futures = "0.3.31"
mime_guess = "2.0.5"
rust-embed = { version = "8.7.2", features = ["actix", "actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.0", features = ["full", "time", "macros", "rt-multi-thread", "tracing"]}
windows-service = "0.8.0"
time = { version = "0.3.41", features = ["formatting", "macros", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log", "local-time"] }
tokio-util = "0.7.15"
tracing-appender = "0.2.3"
utoipa = { version="5.3.1", features = ["actix_extras", "chrono", "uuid"]}
utoipa-swagger-ui = {version="9.0.1", features=["actix-web"]}
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8.3", features = [ "chrono", "sqlite", "runtime-tokio", "tls-native-tls" ] }
argon2 = { version = "0.5.3", features = ["std"] }
rusty_paseto = "0.7.2"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
fake = "4.3.0"

[package.metadata.env]
HOST = "127.0.0.1"
PORT = 8041
WINDOW_SERVICE_HOST = "127.0.0.1"
WINDOW_SERVICE_PORT = 8091

[features]
default = [] # No features enabled by default
windows_service = [] # Enables service mode

[[bin]]
name = "actix-svelte"
path = "src/main.rs"

[[bin]]
name = "actix-svelte-ws"
path = "src/ws-main.rs"

[profile.release]
opt-level = "s"       # Optimize for size while considering speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
strip = "symbols"     # Remove symbol information while retaining necessary debugging info
